--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Multiple linear regression</title>
-    <link href="../static/styles/styles.css" type="text/css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='master29.css') }}" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="quimat">
+      <ul>
+        <li><img src="../static/logo.jpg" alt="pic1"></li>
+        <li><p>Division of Pharmaceutical Chemistry, BCRCP, INDIA</p></li>
+      </ul>
+
+    </div>
     {% block content %}
     {% endblock %}
   </body>
