--- a/templates/data.html
+++ b/templates/data.html
@@ -49,5 +49,6 @@
     </tr>
   </table>
 <a href="/resultsTS">Test set predicted results</a><br>
-<a href="/plot.png">Check plot</a>
+<a href="/plot.png">Check plot for observed vs predicted</a>
+<a href="/plot2.png">Check plot for standardized coefficients</a>
 {% endblock %}
